--- a/browser/index.html
+++ b/browser/index.html
@@ -145,8 +145,8 @@
       </form>
     </dialog>
     <footer class="footer">
-      By <a href="http://kenrick95.org">Kenrick95</a>. Fork this project at
-      <a href="https://github.com/kenrick95/c4">GitHub</a>.
+      By <a href="https://github.com/benlovesfoxes">Ben</a>. Fork this project at
+      <a href="https://github.com/benlovesfoxes/c4">GitHub</a>.
     </footer>
     <script type="module" src="./src/app.ts"></script>
   </body>
